--- a/SwiftPlaces/View/Places/PlacesHomeViewController.xib
+++ b/SwiftPlaces/View/Places/PlacesHomeViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlacesHomeViewController" customModule="SwiftPlaces" customModuleProvider="target">
             <connections>
+                <outlet property="placesCardsCollectionView" destination="KgE-hB-82C" id="hkC-Ht-rlS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,19 +19,24 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yfS-OD-STh">
-                    <rect key="frame" x="163.5" y="433" width="87" height="30"/>
-                    <state key="normal" title="Go to details"/>
-                    <connections>
-                        <action selector="didTapGoToDetails:" destination="-1" eventType="touchUpInside" id="QNs-JN-8Zh"/>
-                    </connections>
-                </button>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="KgE-hB-82C">
+                    <rect key="frame" x="16" y="68" width="382" height="770"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="16" id="Vrt-dQ-va1">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="yfS-OD-STh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="T4M-dl-bXu"/>
-                <constraint firstItem="yfS-OD-STh" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="YCa-Gz-Fff"/>
+                <constraint firstItem="KgE-hB-82C" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="24" id="D7C-dP-XYA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="KgE-hB-82C" secondAttribute="trailing" constant="16" id="cdR-n2-bYE"/>
+                <constraint firstItem="KgE-hB-82C" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ee0-9O-uTG"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="KgE-hB-82C" secondAttribute="bottom" constant="24" id="fUH-BP-rsR"/>
             </constraints>
             <point key="canvasLocation" x="132" y="110"/>
         </view>
