--- a/SwiftPlaces/View/Places/PlaceCardCollectionViewCell.xib
+++ b/SwiftPlaces/View/Places/PlaceCardCollectionViewCell.xib
@@ -4,31 +4,111 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="placeCardCell" id="gTV-IL-0wX" customClass="PlaceCardCollectionViewCell" customModule="SwiftPlaces" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="339" height="523"/>
+            <rect key="frame" x="0.0" y="0.0" width="339" height="778"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="339" height="523"/>
+                <rect key="frame" x="0.0" y="0.0" width="339" height="778"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="COB-5r-fUE" userLabel="Card View" customClass="CardView" customModule="SwiftPlaces" customModuleProvider="target">
-                        <rect key="frame" x="4" y="4" width="331" height="515"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Qg-hU-qdF" userLabel="Content View" customClass="CardView" customModule="SwiftPlaces" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="339" height="778"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqA-5L-cB8">
-                                <rect key="frame" x="0.0" y="0.0" width="331" height="360.5"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="COB-5r-fUE" userLabel="Card View">
+                                <rect key="frame" x="0.0" y="0.0" width="339" height="231"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqA-5L-cB8">
+                                        <rect key="frame" x="0.0" y="0.0" width="339" height="231"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="hqA-5L-cB8" firstAttribute="top" secondItem="COB-5r-fUE" secondAttribute="top" id="4zy-rc-z3P"/>
+                                    <constraint firstItem="hqA-5L-cB8" firstAttribute="leading" secondItem="COB-5r-fUE" secondAttribute="leading" id="JbL-Kj-sth"/>
+                                    <constraint firstAttribute="trailing" secondItem="hqA-5L-cB8" secondAttribute="trailing" id="Q01-CD-zlA"/>
+                                    <constraint firstAttribute="bottom" secondItem="hqA-5L-cB8" secondAttribute="bottom" id="hCr-Lf-MBr"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="pW0-UU-zn1">
+                                <rect key="frame" x="0.0" y="239" width="339" height="523"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="let-ea-Rbr">
+                                        <rect key="frame" x="0.0" y="0.0" width="339" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Z9-Nx-Mev" customClass="Title" customModule="SwiftPlaces" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="339" height="50"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="4Z9-Nx-Mev" firstAttribute="leading" secondItem="let-ea-Rbr" secondAttribute="leading" id="H2Y-BQ-2em"/>
+                                            <constraint firstAttribute="bottom" secondItem="4Z9-Nx-Mev" secondAttribute="bottom" id="dfc-Ff-kxP"/>
+                                            <constraint firstItem="4Z9-Nx-Mev" firstAttribute="top" secondItem="let-ea-Rbr" secondAttribute="top" id="gg4-o7-G77"/>
+                                            <constraint firstAttribute="trailing" secondItem="4Z9-Nx-Mev" secondAttribute="trailing" id="sQq-ms-rk4"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAP-9V-ZXR">
+                                        <rect key="frame" x="0.0" y="54" width="339" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yE-5h-zqY" customClass="Subtitle" customModule="SwiftPlaces" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="339" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="4yE-5h-zqY" firstAttribute="leading" secondItem="MAP-9V-ZXR" secondAttribute="leading" id="ZZ2-Xl-NfC"/>
+                                            <constraint firstAttribute="trailing" secondItem="4yE-5h-zqY" secondAttribute="trailing" id="bQj-md-msf"/>
+                                            <constraint firstItem="4yE-5h-zqY" firstAttribute="top" secondItem="MAP-9V-ZXR" secondAttribute="top" id="kve-PU-hhw"/>
+                                            <constraint firstAttribute="bottom" secondItem="4yE-5h-zqY" secondAttribute="bottom" id="o7r-Xy-DnO"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xUC-ao-As1">
+                                        <rect key="frame" x="0.0" y="108" width="339" height="415"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jqe-Gh-VVJ">
+                                                <rect key="frame" x="0.0" y="0.0" width="339" height="415"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sm-Uw-TP1" customClass="Number" customModule="SwiftPlaces" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="339" height="415"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="9sm-Uw-TP1" secondAttribute="trailing" id="NKs-tl-5Mn"/>
+                                                    <constraint firstItem="9sm-Uw-TP1" firstAttribute="top" secondItem="jqe-Gh-VVJ" secondAttribute="top" id="OBm-h7-5q3"/>
+                                                    <constraint firstItem="9sm-Uw-TP1" firstAttribute="leading" secondItem="jqe-Gh-VVJ" secondAttribute="leading" id="R2L-qc-IRD"/>
+                                                    <constraint firstAttribute="bottom" secondItem="9sm-Uw-TP1" secondAttribute="bottom" id="gK9-mA-we7"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="hqA-5L-cB8" firstAttribute="height" secondItem="COB-5r-fUE" secondAttribute="height" multiplier="0.7" id="4kt-kc-dwK"/>
-                            <constraint firstItem="hqA-5L-cB8" firstAttribute="top" secondItem="COB-5r-fUE" secondAttribute="top" id="4zy-rc-z3P"/>
-                            <constraint firstItem="hqA-5L-cB8" firstAttribute="leading" secondItem="COB-5r-fUE" secondAttribute="leading" id="JbL-Kj-sth"/>
-                            <constraint firstAttribute="trailing" secondItem="hqA-5L-cB8" secondAttribute="trailing" id="Q01-CD-zlA"/>
+                            <constraint firstAttribute="trailing" secondItem="COB-5r-fUE" secondAttribute="trailing" id="7KS-3y-BDa"/>
+                            <constraint firstItem="COB-5r-fUE" firstAttribute="top" secondItem="3Qg-hU-qdF" secondAttribute="top" id="Cnr-XQ-0R7"/>
+                            <constraint firstItem="COB-5r-fUE" firstAttribute="leading" secondItem="3Qg-hU-qdF" secondAttribute="leading" id="GP5-5e-YXu"/>
+                            <constraint firstAttribute="trailing" secondItem="pW0-UU-zn1" secondAttribute="trailing" id="ZHo-fr-Ije"/>
+                            <constraint firstAttribute="bottom" secondItem="pW0-UU-zn1" secondAttribute="bottom" constant="16" id="cjg-p6-4PU"/>
+                            <constraint firstItem="pW0-UU-zn1" firstAttribute="top" secondItem="COB-5r-fUE" secondAttribute="bottom" constant="8" id="ezy-DK-o0x"/>
+                            <constraint firstItem="pW0-UU-zn1" firstAttribute="leading" secondItem="3Qg-hU-qdF" secondAttribute="leading" id="mq1-W8-KKf"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -49,16 +129,35 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="COB-5r-fUE" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="Lhf-vk-Ri3"/>
-                <constraint firstItem="COB-5r-fUE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="dUf-go-pro"/>
-                <constraint firstAttribute="bottom" secondItem="COB-5r-fUE" secondAttribute="bottom" constant="4" id="maf-4V-0VS"/>
-                <constraint firstAttribute="trailing" secondItem="COB-5r-fUE" secondAttribute="trailing" constant="4" id="nUz-qh-hBx"/>
+                <constraint firstAttribute="bottom" secondItem="3Qg-hU-qdF" secondAttribute="bottom" id="02J-st-x7X"/>
+                <constraint firstItem="3Qg-hU-qdF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Smu-Ha-Rty"/>
+                <constraint firstAttribute="trailing" secondItem="3Qg-hU-qdF" secondAttribute="trailing" id="U17-DM-Wzi"/>
+                <constraint firstItem="3Qg-hU-qdF" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="kcr-nc-Ekv"/>
             </constraints>
-            <size key="customSize" width="339" height="523"/>
+            <size key="customSize" width="339" height="778"/>
             <connections>
                 <outlet property="placeImageView" destination="hqA-5L-cB8" id="6iE-a7-zEE"/>
+                <outlet property="reviewScoreLabel" destination="9sm-Uw-TP1" id="gLh-c5-2bD"/>
+                <outlet property="subtitleLabel" destination="4yE-5h-zqY" id="JpH-P9-YNx"/>
+                <outlet property="titleLabel" destination="4Z9-Nx-Mev" id="FfO-Ne-7Sg"/>
             </connections>
-            <point key="canvasLocation" x="341.304347826087" y="256.13839285714283"/>
+            <point key="canvasLocation" x="343" y="137"/>
         </collectionViewCell>
     </objects>
+    <designables>
+        <designable name="4Z9-Nx-Mev">
+            <size key="intrinsicContentSize" width="42" height="20"/>
+        </designable>
+        <designable name="4yE-5h-zqY">
+            <size key="intrinsicContentSize" width="41.5" height="20.5"/>
+        </designable>
+        <designable name="9sm-Uw-TP1">
+            <size key="intrinsicContentSize" width="41.5" height="20.5"/>
+        </designable>
+    </designables>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
