--- a/SwiftPlaces/View/Places/Card/PlaceCardCollectionViewCell.xib
+++ b/SwiftPlaces/View/Places/Card/PlaceCardCollectionViewCell.xib
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Qg-hU-qdF" userLabel="Content View" customClass="CardView" customModule="SwiftPlaces" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="339" height="778"/>
+                        <rect key="frame" x="4" y="4" width="331" height="770"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="COB-5r-fUE" userLabel="Card View">
-                                <rect key="frame" x="0.0" y="0.0" width="339" height="231"/>
+                                <rect key="frame" x="0.0" y="0.0" width="331" height="223"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqA-5L-cB8">
-                                        <rect key="frame" x="0.0" y="0.0" width="339" height="231"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqA-5L-cB8">
+                                        <rect key="frame" x="0.0" y="0.0" width="331" height="223"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -36,13 +36,13 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="pW0-UU-zn1">
-                                <rect key="frame" x="0.0" y="239" width="339" height="523"/>
+                                <rect key="frame" x="8" y="231" width="315" height="523"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="let-ea-Rbr">
-                                        <rect key="frame" x="0.0" y="0.0" width="339" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="315" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Z9-Nx-Mev" customClass="Title" customModule="SwiftPlaces" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="339" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="315" height="50"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -57,10 +57,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAP-9V-ZXR">
-                                        <rect key="frame" x="0.0" y="54" width="339" height="50"/>
+                                        <rect key="frame" x="0.0" y="54" width="315" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yE-5h-zqY" customClass="Subtitle" customModule="SwiftPlaces" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="339" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="315" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -75,13 +75,13 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xUC-ao-As1">
-                                        <rect key="frame" x="0.0" y="108" width="339" height="415"/>
+                                        <rect key="frame" x="0.0" y="108" width="315" height="415"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jqe-Gh-VVJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="339" height="415"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="315" height="415"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sm-Uw-TP1" customClass="Number" customModule="SwiftPlaces" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="339" height="415"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="315" height="415"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -105,10 +105,10 @@
                             <constraint firstAttribute="trailing" secondItem="COB-5r-fUE" secondAttribute="trailing" id="7KS-3y-BDa"/>
                             <constraint firstItem="COB-5r-fUE" firstAttribute="top" secondItem="3Qg-hU-qdF" secondAttribute="top" id="Cnr-XQ-0R7"/>
                             <constraint firstItem="COB-5r-fUE" firstAttribute="leading" secondItem="3Qg-hU-qdF" secondAttribute="leading" id="GP5-5e-YXu"/>
-                            <constraint firstAttribute="trailing" secondItem="pW0-UU-zn1" secondAttribute="trailing" id="ZHo-fr-Ije"/>
+                            <constraint firstAttribute="trailing" secondItem="pW0-UU-zn1" secondAttribute="trailing" constant="8" id="ZHo-fr-Ije"/>
                             <constraint firstAttribute="bottom" secondItem="pW0-UU-zn1" secondAttribute="bottom" constant="16" id="cjg-p6-4PU"/>
                             <constraint firstItem="pW0-UU-zn1" firstAttribute="top" secondItem="COB-5r-fUE" secondAttribute="bottom" constant="8" id="ezy-DK-o0x"/>
-                            <constraint firstItem="pW0-UU-zn1" firstAttribute="leading" secondItem="3Qg-hU-qdF" secondAttribute="leading" id="mq1-W8-KKf"/>
+                            <constraint firstItem="pW0-UU-zn1" firstAttribute="leading" secondItem="3Qg-hU-qdF" secondAttribute="leading" constant="8" id="mq1-W8-KKf"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -129,10 +129,10 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="3Qg-hU-qdF" secondAttribute="bottom" id="02J-st-x7X"/>
-                <constraint firstItem="3Qg-hU-qdF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Smu-Ha-Rty"/>
-                <constraint firstAttribute="trailing" secondItem="3Qg-hU-qdF" secondAttribute="trailing" id="U17-DM-Wzi"/>
-                <constraint firstItem="3Qg-hU-qdF" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="kcr-nc-Ekv"/>
+                <constraint firstAttribute="bottom" secondItem="3Qg-hU-qdF" secondAttribute="bottom" constant="4" id="02J-st-x7X"/>
+                <constraint firstItem="3Qg-hU-qdF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="Smu-Ha-Rty"/>
+                <constraint firstAttribute="trailing" secondItem="3Qg-hU-qdF" secondAttribute="trailing" constant="4" id="U17-DM-Wzi"/>
+                <constraint firstItem="3Qg-hU-qdF" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="kcr-nc-Ekv"/>
             </constraints>
             <size key="customSize" width="339" height="778"/>
             <connections>
