Adiciona lib de rating

--- a/SwiftPlaces/View/Places/Card/PlaceCardCollectionViewCell.xib
+++ b/SwiftPlaces/View/Places/Card/PlaceCardCollectionViewCell.xib
@@ -24,10 +24,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="331" height="770"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="COB-5r-fUE" userLabel="Image View">
-                                        <rect key="frame" x="0.0" y="0.0" width="331" height="231"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="331" height="223"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqA-5L-cB8">
-                                                <rect key="frame" x="0.0" y="0.0" width="331" height="231"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="331" height="223"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -39,7 +39,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="pW0-UU-zn1">
-                                        <rect key="frame" x="8" y="239" width="315" height="523"/>
+                                        <rect key="frame" x="8" y="231" width="315" height="523"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="let-ea-Rbr">
                                                 <rect key="frame" x="0.0" y="0.0" width="315" height="50"/>
@@ -77,14 +77,25 @@
                                                     <constraint firstAttribute="bottom" secondItem="4yE-5h-zqY" secondAttribute="bottom" id="o7r-Xy-DnO"/>
                                                 </constraints>
                                             </view>
-                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xUC-ao-As1">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="xUC-ao-As1">
                                                 <rect key="frame" x="0.0" y="108" width="315" height="415"/>
                                                 <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wOG-0R-AOR" customClass="CosmosView" customModule="Cosmos">
+                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="415"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="image" keyPath="filledImage" value="starOn"/>
+                                                            <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="starOff"/>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="starSize">
+                                                                <real key="value" value="16"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jqe-Gh-VVJ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="315" height="415"/>
+                                                        <rect key="frame" x="180" y="0.0" width="135" height="415"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sm-Uw-TP1" customClass="Number" customModule="SwiftPlaces" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="0.0" width="315" height="415"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="135" height="415"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -109,7 +120,7 @@
                                     <constraint firstAttribute="trailing" secondItem="pW0-UU-zn1" secondAttribute="trailing" constant="8" id="DLd-3M-Euz"/>
                                     <constraint firstAttribute="trailing" secondItem="COB-5r-fUE" secondAttribute="trailing" id="KXu-oP-cRG"/>
                                     <constraint firstItem="pW0-UU-zn1" firstAttribute="top" secondItem="COB-5r-fUE" secondAttribute="bottom" constant="8" id="SZX-Sr-7Qg"/>
-                                    <constraint firstAttribute="bottom" secondItem="pW0-UU-zn1" secondAttribute="bottom" constant="8" id="UrO-uA-lS9"/>
+                                    <constraint firstAttribute="bottom" secondItem="pW0-UU-zn1" secondAttribute="bottom" constant="16" id="UrO-uA-lS9"/>
                                     <constraint firstItem="COB-5r-fUE" firstAttribute="top" secondItem="QJl-JZ-zRS" secondAttribute="top" id="XOU-1e-of1"/>
                                     <constraint firstItem="COB-5r-fUE" firstAttribute="leading" secondItem="QJl-JZ-zRS" secondAttribute="leading" id="uEu-pL-LPh"/>
                                 </constraints>
@@ -150,6 +161,7 @@
             </constraints>
             <size key="customSize" width="339" height="778"/>
             <connections>
+                <outlet property="cosmosView" destination="wOG-0R-AOR" id="rST-ac-iTM"/>
                 <outlet property="placeImageView" destination="hqA-5L-cB8" id="6iE-a7-zEE"/>
                 <outlet property="reviewScoreLabel" destination="9sm-Uw-TP1" id="gLh-c5-2bD"/>
                 <outlet property="subtitleLabel" destination="4yE-5h-zqY" id="JpH-P9-YNx"/>
@@ -168,8 +180,13 @@
         <designable name="9sm-Uw-TP1">
             <size key="intrinsicContentSize" width="41.5" height="20.5"/>
         </designable>
+        <designable name="wOG-0R-AOR">
+            <size key="intrinsicContentSize" width="100" height="16"/>
+        </designable>
     </designables>
     <resources>
+        <image name="starOff" width="9" height="8"/>
+        <image name="starOn" width="9" height="8"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
