--- a/SwiftPlaces/View/Places/Detail/PlacesDetailsViewController.xib
+++ b/SwiftPlaces/View/Places/Detail/PlacesDetailsViewController.xib
@@ -10,11 +10,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlacesDetailsViewController" customModule="SwiftPlaces" customModuleProvider="target">
             <connections>
-                <outlet property="aboutLabel" destination="xZi-QN-qez" id="sbc-2V-hcM"/>
+                <outlet property="aboutLabel" destination="W9Z-kQ-VBo" id="MJm-Cl-85c"/>
+                <outlet property="aboutTextLabel" destination="xZi-QN-qez" id="cXJ-OQ-8n4"/>
                 <outlet property="detailPhotosCollectionView" destination="eZS-cy-wSF" id="tR1-gi-mbh"/>
                 <outlet property="locationLabel" destination="NZ2-Pg-tDK" id="eYm-NO-BAa"/>
                 <outlet property="pageImage" destination="JfY-BV-Re5" id="gK5-fj-hDQ"/>
                 <outlet property="phoneLabel" destination="fQx-1e-P9a" id="bIg-YC-LL2"/>
+                <outlet property="photosLabel" destination="Qef-Bb-iUY" id="1rh-eW-Tle"/>
                 <outlet property="placeNameLabel" destination="Zk3-2f-Yn3" id="2BV-jO-m81"/>
                 <outlet property="reviewScore" destination="1KP-HU-P6f" id="Nfp-Um-ORJ"/>
                 <outlet property="reviewView" destination="8Hl-me-7ry" id="e4B-5L-V8j"/>
@@ -45,23 +47,10 @@
                                                         <constraint firstAttribute="height" constant="200" id="FJb-OK-Ij8"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UfU-c6-QO5">
-                                                    <rect key="frame" x="20" y="24" width="32" height="32"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="32" id="2S8-Tw-2Sk"/>
-                                                        <constraint firstAttribute="width" constant="32" id="VNW-gF-RIp"/>
-                                                    </constraints>
-                                                    <state key="normal" image="arrowBack"/>
-                                                    <connections>
-                                                        <action selector="didTapToGoBack:" destination="-1" eventType="touchUpInside" id="s1t-sP-xB7"/>
-                                                    </connections>
-                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
-                                                <constraint firstItem="UfU-c6-QO5" firstAttribute="leading" secondItem="hUN-sZ-HUp" secondAttribute="leading" constant="20" id="81p-ig-ni8"/>
                                                 <constraint firstItem="JfY-BV-Re5" firstAttribute="top" secondItem="hUN-sZ-HUp" secondAttribute="top" id="Cpl-7i-uid"/>
-                                                <constraint firstItem="UfU-c6-QO5" firstAttribute="top" secondItem="hUN-sZ-HUp" secondAttribute="top" constant="24" id="bt8-P3-yqV"/>
                                                 <constraint firstAttribute="bottom" secondItem="JfY-BV-Re5" secondAttribute="bottom" id="hIk-YK-0ng"/>
                                                 <constraint firstItem="JfY-BV-Re5" firstAttribute="leading" secondItem="hUN-sZ-HUp" secondAttribute="leading" id="lbg-3H-x6N"/>
                                                 <constraint firstAttribute="trailing" secondItem="JfY-BV-Re5" secondAttribute="trailing" id="vgy-Ms-e1N"/>
@@ -443,7 +432,6 @@
         </designable>
     </designables>
     <resources>
-        <image name="arrowBack" width="18" height="18"/>
         <image name="phone" width="15" height="15"/>
         <image name="pin" width="15" height="15"/>
         <image name="starOff" width="9" height="8"/>
